# textmod

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: syntax-and-unit-tests.yml
src/: preprocessing.py
tests/: test.py  test_all.py
textmod/: textmodification.py
textmodification/: __init__.py
